--- a/index.html
+++ b/index.html
@@ -4,18 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Just for Minh Le</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
+    <title>FOR MINH YÊU DẤU</title>
+    <link rel="shortcut icon" type="image/png" href="bunny.png" />
+
 </head>
 
 <body>
-    <div class="box">
-       <li>1</li>
-       <li>2</li>
-       <li>3</li>
-       <li>4</li>
-    </div>
+    <style>
+        h3 {
+            /* transform: rotate(180def); */
+            font-family: "Dance Script", cursive;
+            color: rgb(255, 143, 163);
+            position: relative;
+            top: 30px;
+        }
+    </style>
+    <header class="header">
+        <h3>FROM ANH TÂM PÉO Ị</h3>
+    </header>
+
+    <main>
+        <div class="content">
+            <div class="content_left">
+                <p class="message"> 14/3 - Valentine trắng <br> Gửi tới người anh yêu, chúc em một ngày vui vẻ và ý nghĩa. Cảm ơn em đã luôn bên cạnh và yêu thương anh. Mong rằng chúng ta sẽ mãi bên nhau và yêu thương nhau như vậy em nhé !</p>
+
+
+                <div class="letter">
+                    <img src="butterfly.png" alt="Đây là cái nơ">
+                </div>
+
+            </div>
+            <div class="content_right">
+                <div class="content_up">
+
+                </div>
+                <div class="content_down">
+                    <div class="happy-valentines">
+                        <div class="valentines-day-card">
+                            <div class="clouds"></div>
+                            <div class="hearts">
+                                <div class="heartOne">
+                                    <div class="left-side"></div>
+                                    <div class="right-side"></div>
+                                </div>
+                                <div class="heartTwo">
+                                    <div class="left-side"></div>
+                                    <div class="right-side"></div>
+                                </div>
+                                <div class="heartThree">
+                                    <div class="left-side"></div>
+                                    <div class="right-side"></div>
+                                </div>
+                                <div class="heartFour">
+                                    <div class="left-side"></div>
+                                    <div class="right-side"></div>
+                                </div>
+                                <div class="heartFive">
+                                    <div class="left-side"></div>
+                                    <div class="right-side"></div>
+                                </div>
+                            </div>
+                            <div class="text"><span>Happy White Valentine's</br> Day !</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </main>
+            <audio autoplay>
+                <source src="audio.mp3">
+                Nhạc khum load huhu
+            </audio>
 </body>
 
 </html>
